samples/_failures_safe/1761074958_4798ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec6b1ee7.c: In function ‘main’:
./samples/SAFE/__tmp_ec6b1ee7.c:149:9: error: expected expression at end of input
  149 |         input.data[i] = (uint8_t)(
      |         ^~~~~
./samples/SAFE/__tmp_ec6b1ee7.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ec6b1ee7.c:149:9: error: expected declaration or statement at end of input
